Fixed issue where volume button was overlapping track scrubber.

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
     --exiled-track-text-color: #E79DC0;
     --volumeBar-slider-width: 6.5rem;
     --navbar-button-width: 2rem;
-    --navbar-button-height: 1.35rem;
+    --navbar-button-height: 1.3rem;
     --siteMenu-button-width: 1.75rem;
     --siteMenu-button-height: 1.3rem;
     --navTransitionTime: 0.7s;
